--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ footer {
   justify-content: center;
   margin: 0 !important;
   height: 40px;
+  border-top: 1px solid black;
+  width: 100%;
+  position: absolute;
+  left: 0px;
 }
 
 footer li {
@@ -358,6 +362,16 @@ form {
   opacity: 0;
 }
 
+.hover-image img {
+  max-height: 80px;
+  min-height: 80px;
+  object-fit: cover;
+}
+
+.hover-title:hover .hover-image {
+  visibility: visible;
+  opacity: 1;
+}
 .hover-image-left {
   visibility: hidden;
   width: 70px;
@@ -369,23 +383,99 @@ form {
   opacity: 0;
 }
 
-.hover-image img {
-  max-height: 80px;
-  min-height: 80px;
-  object-fit: cover;
-}
-
 .hover-image-left img {
   max-height: 80px;
   min-height: 80px;
   object-fit: cover;
 }
 
-.hover-title:hover .hover-image {
-  visibility: visible;
-  opacity: 1;
-}
 .hover-title:hover .hover-image-left {
   visibility: visible;
   opacity: 1;
+}
+
+.container_photo_block {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  margin: 0 20px 0 20px;
+  padding-bottom: 80px;
+}
+
+.photo-container {
+  position: relative;
+  width: 100%;
+  height: 500px;
+}
+
+.block_image  {
+  width: inherit;
+}
+
+.block_image img {
+  width: inherit;
+  object-fit: cover;
+  height: 500px;
+}
+
+.block_info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none; 
+}
+
+.photo-container:hover .block_info {
+  opacity: 1;
+  pointer-events: auto; 
+}
+
+.info_reference {
+  margin: 10px 0;
+  bottom: 0px;
+  position: absolute;
+  right: 10px;
+  font-family: Poppins;
+  font-size: 14px;
+}
+.info_category {
+  margin: 10px 0;
+  bottom: 0px;
+  position: absolute;
+  left: 10px;
+  font-family: "Space Mono";
+  font-size: 14px;
+}
+
+.eye_lightbox img {
+  max-width: 50px;
+  max-height: auto;
+  object-fit: contain;
+}
+
+.full_screen_lightbox img {
+  top: 0px;
+  position: absolute;
+  right: 10px;
+  max-width: 40px;
+  max-height: auto;
+  object-fit: contain;
+
+}
+
+.maybe {
+  margin: 60px 20px 50px 20px;
+
 }
