--- a/style.css
+++ b/style.css
@@ -21,10 +21,12 @@
 h1 {
   font-family: "Space Mono";
   font-size: 96px;
+  font-weight: bolder;
   font-style: italic;
-  font-weight: 700;
+  text-transform: uppercase;
+  -webkit-text-stroke: 2px rgb(255, 255, 255);
+  -webkit-text-fill-color: transparent;
 }
-
 h2 {
   font-family: "Space Mono";
   font-size: 66px;
@@ -46,7 +48,6 @@ p {
 
 
 body {
-  max-width: 1280px;
   margin: auto;
 }
 
@@ -58,6 +59,9 @@ header {
   align-items: center;
   height: 80px;
   padding: 0 20px 0 20px;
+  max-width: 1280px;
+  margin: auto;
+
 }
 
 nav ul {
@@ -81,11 +85,10 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 !important;
   height: 40px;
   border-top: 1px solid black;
   width: 100%;
-  position: absolute;
+  position: relative;
   left: 0px;
 }
 
@@ -478,4 +481,17 @@ form {
 .maybe {
   margin: 60px 20px 50px 20px;
 
+}
+
+
+/* ACCUEIL */
+
+.hero {
+  display: flex;
+  width: 100vw;
+  height: calc(100vh - 80px);
+  background-size: cover;
+  background-position: center;
+  justify-content: center;
+  align-items: center;
 }
