--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .hidden {
-  right: -100%;
+  right: -100vw;
   transition: 0.3s ease;
 }
 
@@ -534,7 +534,7 @@ form {
 
 .hero {
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 80px);
   background-size: cover;
   background-position: center;
@@ -1003,7 +1003,7 @@ select {
 
   .nav_mob_container {
     display: block;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: fixed;
     background-color: white;
